ascet pulse signal und unit tests

--- a/ASCET/.project
+++ b/ASCET/.project
@@ -3,6 +3,7 @@
 	<name>ParkAssist</name>
 	<comment></comment>
 	<projects>
+		<project>AssertionLibrary</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
